[tool.poetry]
name = "up-tracker"
version = "0.1.0"
description = ""
authors = ["danlsn <danlsn@github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
iso4217 = "^1.11.20220401"
pydantic = "^1.10.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
